# Null-Move

./: .gitignore  Backup_game_data  + additional grandmaster FEN's.json  README.md  pyproject.toml
cpp/: nullmove_eval.cpp
scripts/: build_cpp_eval.ps1  install_startup_autorun.ps1  open_vscode.ps1  quick_selfplay.ps1  quick_uci_smoke.ps1  recover_chunks.ps1  register_startup_training_task.ps1  register_vscode_logon_task.ps1  schedule_training.ps1  selfplay.py  start_training.ps1  stop_training.ps1  tail_selfplay_workers.ps1  tournament.py
src/nullmove/: __main__.py  az_features.py  az_mcts.py  az_net.py  cpp_eval.py  engine.py  eval.py  nn_eval.py  search.py  types.py  uci.py
train/: az_eval.py  az_loop.py  az_selfplay.py  az_train.py  generate_dataset.py  generate_dataset_nullmove.py  init_weights.py  train_nn.py
